fixing overflow

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,4 +1,5 @@
 .contcontent {
+    overflow-x: hidden;
     background-color: #2c2d32;
     height: 89.5vh;
     align-items: center;
